Change code to FreeRTOS

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,17 +1,20 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32doit-devkit-v1]
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-upload_port = COM9
+
+; --- Cấu hình nạp và debug ---
+upload_port = COM6
 monitor_speed = 115200
+
+; --- QUAN TRỌNG: Bộ giải mã lỗi ---
+; Giúp bạn biết lỗi nằm ở dòng code nào khi ESP32 bị crash (màn hình đỏ/Guru Meditation Error)
+monitor_filters = esp32_exception_decoder
+
+; --- QUAN TRỌNG: Phân vùng bộ nhớ ---
+; Thư viện SSL của AWS rất nặng, partition mặc định có thể không đủ chỗ.
+; huge_app.csv dành tối đa bộ nhớ cho Code (khoảng 3MB) thay vì chia cho SPIFFS.
+board_build.partitions = huge_app.csv
+
+; --- Thư viện ---
 lib_deps = knolleary/PubSubClient @ ^2.8
