Fix Bug sent OK TO aws done

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,7 +4,7 @@ board = esp32doit-devkit-v1
 framework = arduino
 
 ; --- Cấu hình nạp và debug ---
-upload_port = COM6
+upload_port = COM10
 monitor_speed = 115200
 
 ; --- QUAN TRỌNG: Bộ giải mã lỗi ---
@@ -17,4 +17,6 @@ monitor_filters = esp32_exception_decoder
 board_build.partitions = huge_app.csv
 
 ; --- Thư viện ---
-lib_deps = knolleary/PubSubClient @ ^2.8
+lib_deps = 
+    knolleary/PubSubClient @ ^2.8
+    bblanchon/ArduinoJson @ ^6.21.3
